tests/paczka1/small_fuzzy/67400867.err
Error in line 8: h6I8Xas A53 36,3
Error in line 9: ZKqEmHGtf A53 61,6
Error in line 14: ZKqEmHGtf A343 49,9
Error in line 15: ZKqEmHGtf S781 53,2
